# python-template

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: logging.yaml  settings.yaml  settings_dev.yaml  settings_production.yaml
src/python_template/: __init__.py  logger.py  main.py
src/python_template/config/: __init__.py  settings.py
tests/: __init__.py  test_logger.py  test_main.py  test_settings.py
